--- a/BoundingBox_dialog_base.ui
+++ b/BoundingBox_dialog_base.ui
@@ -1,6 +1,6 @@
 <ui version="4.0" >
- <class>GetBoundingBoxDialogBase</class>
- <widget class="QDialog" name="GetBoundingBoxDialogBase" >
+ <class>BoundingBoxDialogBase</class>
+ <widget class="QDialog" name="BoundingBoxDialogBase" >
   <property name="geometry" >
    <rect>
     <x>0</x>
@@ -32,7 +32,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:600;&quot;&gt;Bounding Box&lt;/span&gt; (xmax,ymax,xmin,ymin)&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:600;&quot;&gt;Bounding Box&lt;/span&gt; (xmin,ymin,xmax,ymax)&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QPushButton" name="GetBB">
