--- a/BoundingBox_dialog_base.ui
+++ b/BoundingBox_dialog_base.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>316</height>
+    <width>410</width>
+    <height>360</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -17,7 +17,7 @@
     <rect>
      <x>20</x>
      <y>40</y>
-     <width>371</width>
+     <width>355</width>
      <height>41</height>
     </rect>
    </property>
@@ -53,8 +53,8 @@
     <rect>
      <x>20</x>
      <y>160</y>
-     <width>371</width>
-     <height>141</height>
+     <width>355</width>
+     <height>100</height>
     </rect>
    </property>
    <property name="html">
@@ -76,6 +76,25 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="text">
     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:600;&quot;&gt;GetMap request &lt;/span&gt;of selected layer&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="warningLabel">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>270</y>
+     <width>371</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string></string>
+   </property>
+   <property name="styleSheet">
+    <string>color: red; font-weight: bold;</string>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
    </property>
   </widget>
   <action name="actionGetBB">
