--- a/BoundingBox_dialog_base.ui
+++ b/BoundingBox_dialog_base.ui
@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>410</width>
-    <height>360</height>
+    <height>410</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -54,7 +54,7 @@
      <x>20</x>
      <y>160</y>
      <width>355</width>
-     <height>100</height>
+     <height>110</height>
     </rect>
    </property>
    <property name="html">
@@ -70,19 +70,19 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>20</x>
      <y>120</y>
-     <width>221</width>
+     <width>371</width>
      <height>41</height>
     </rect>
    </property>
    <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:600;&quot;&gt;GetMap request &lt;/span&gt;of selected layer&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:600;&quot;&gt;Constructed GetMap request &lt;/span&gt;of selected layer&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QLabel" name="warningLabel">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>270</y>
+     <y>280</y>
      <width>371</width>
      <height>40</height>
     </rect>
@@ -95,6 +95,35 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="wordWrap">
     <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="actualLabel">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>330</y>
+     <width>355</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:600;&quot;&gt;Actual GetMap request&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <property name="visible">
+    <bool>false</bool>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textOutput_3">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>365</y>
+     <width>355</width>
+     <height>110</height>
+    </rect>
+   </property>
+   <property name="visible">
+    <bool>false</bool>
    </property>
   </widget>
   <action name="actionGetBB">
